--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -33,3 +33,8 @@ body { padding-top: 60px; }
 //
 // Example:
 // @linkColor: #ff0000;
+
+.control-group.required .control-label:after {
+  content:"*";
+  color:red;
+}
