--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,6 @@
 <header class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar navbar-inverse navbar-fixed-top">
           <div class="navbar-inner">
-          <div class="container">
+          <div class="container-fluid">
           <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -22,5 +21,4 @@
           </div><!--/.nav-collapse -->
         </div>
       </div>
-    </div>
 </header>
