--- a/app/views/losts/show.html.erb
+++ b/app/views/losts/show.html.erb
@@ -15,6 +15,8 @@
     <dt><strong><%= model_class.human_attribute_name(:oclc) %>:</strong></dt>
     <dd><%= @lost.oclc.presence || '-' %></dd>
 
+  <dt><strong><%= model_class.human_attribute_name(:author) %>:</strong></dt>
+  <dd><%= @lost.author.presence || '-' %></dd>
   <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
   <dd><%= @lost.title.presence || '-' %></dd>
   <dt><strong><%= model_class.human_attribute_name(:imprint) %>:</strong></dt>
@@ -47,6 +49,8 @@
      <%= link_to 'OhioLINK', "http://olc1.ohiolink.edu/search/o?SEARCH=#{@lost.oclc}", target: '_blank', class: 'btn' %>
      <%= link_to 'WorldCat', "https://www.worldcat.org/search?q=no:#{@lost.oclc}", target: '_blank', class: 'btn' %>
    <% end %>
+     
 </div>
 </div>
+     <%= link_to 'Create Order', new_order_path(title: @lost.title, author: @lost.author, isbn: @lost.isbn, oclc: @lost.oclc, publisher: @lost.imprint, location: @lost.location.upcase), target: "_blank", class: 'btn btn-success' %>
 </div>
