--- a/app/views/orders/_show_admin_fields.html.erb
+++ b/app/views/orders/_show_admin_fields.html.erb
@@ -10,5 +10,11 @@
       <dd><%= @order.not_yet_published || '-' %></dd>
       <dt><strong><%= model_class.human_attribute_name(:not_yet_published_date) %>:</strong></dt>
       <dd><%= @order.not_yet_published_date || '-' %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:vendor_address) %>:</strong></dt>
+      <dd><%= @order.vendor_address || '-' %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:credit_card_order) %>:</strong></dt>
+      <dd><%= @order.credit_card_order || '-' %></dd>
+    
+  
     </div> 
   </dl>
