--- a/app/views/order_mailer/new_order.html.erb
+++ b/app/views/order_mailer/new_order.html.erb
@@ -34,6 +34,6 @@
       </tr>
     </table>
     </p>
-    <p><%= link_to orders_path(@order), orders_path(@order) %></p>
+    <p><%= link_to order_url(@order), order_url(@order) %></p>
   </body>
 </html>
