--- a/app/views/marc_downloads/index.html.erb
+++ b/app/views/marc_downloads/index.html.erb
@@ -4,7 +4,7 @@
 <table class='table table-striped'>
   <% Dir["public/tmp/records/*.*"].each do |file| %>
     <tr>
-      <td><%= link_to file[/[A-Za-z0-9_\.]*$/], file.gsub('public', '') %></td>
+      <td><%= link_to File.basename(file), "#{root_url}tmp/records/#{File.basename(file)}" %></td>
   </tr>
   <% end %>
 </table>
