--- a/app/views/orders/_show_admin_actions.html.erb
+++ b/app/views/orders/_show_admin_actions.html.erb
@@ -8,7 +8,7 @@
       </a>
           <ul class="dropdown-menu">
            <% @order.current_state.events.keys.each do |i| %> 
-             <li> <%= link_to model_class.human_attribute_name(i), "/orders/#{@order.id}/#{i}", method: :put, data: {confirm: 'Are you sure?'}
+             <li> <%= link_to model_class.human_attribute_name(i), "#{root_url}orders/#{@order.id}/#{i}", method: :put, data: {confirm: 'Are you sure?'}
            %> </li>
            <% end %>
          </ul>
