fix field assignment in order form

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -206,7 +206,7 @@
   <div class="control-group">
         <%= f.label :vendor_address, class: 'control-label' %>
         <div class="controls">
-          <%= f.text_field :not_yet_published_date, class: 'text-field' %>
+          <%= f.text_field :vendor_address, class: 'text-field' %>
         </div>
       </div>
 
