--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -191,7 +191,19 @@
           <%= f.text_field :vendor_note, class: 'text-field' %>
         </div>
       </div> 
-        <div class="control-group">
+         <div class="control-group">
+        <%= f.label :internal_note, class: 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :internal_note, class: 'text-field' %>
+        </div>
+      </div> 
+          <div class="control-group">
+        <%= f.label :processing_note, class: 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :processing_note, class: 'text-field' %>
+        </div>
+      </div> 
+  <div class="control-group">
         <%= f.label :not_yet_published, class: 'control-label' %>
         <div class="controls">
           <%= f.check_box :not_yet_published, class: 'check-box' %>
