--- a/app/views/orders/_show_admin_fields.html.erb
+++ b/app/views/orders/_show_admin_fields.html.erb
@@ -6,6 +6,10 @@
       <dd><%= @order.vendor_code.presence || '-'%></dd>
       <dt><strong><%= model_class.human_attribute_name(:vendor_note) %>:</strong></dt>
       <dd><%= @order.vendor_note.presence || '-'%></dd>
+      <dt><strong><%= model_class.human_attribute_name(:internal_note) %>:</strong></dt>
+      <dd><%= @order.internal_note.presence || '-'%></dd>
+      <dt><strong><%= model_class.human_attribute_name(:processing_note) %>:</strong></dt>
+      <dd><%= @order.processing_note.presence || '-'%></dd>
       <dt><strong><%= model_class.human_attribute_name(:not_yet_published) %>:</strong></dt>
       <dd><%= @order.not_yet_published || '-' %></dd>
       <dt><strong><%= model_class.human_attribute_name(:not_yet_published_date) %>:</strong></dt>
