--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -15,7 +15,11 @@
   <% end %>
  <div class="container">
   <div class="well">
-   <div class="control-group required">
+ 
+    <div class="row">
+    <div class="span7">
+
+    <div class="control-group required">
      <%= f.label :title, class: 'control-label' %>
     <div class="controls">
     <%= f.text_field :title, class: 'text-field' %>
@@ -63,7 +67,13 @@
     <%= f.text_field :edition, class: 'text-field' %>
     </div>
   </div>
-  </div>
+</div>
+<div class="span4"><h5>To aide Acquistions staff, please enter as much title information as possible.</h5></div>
+
+</div>
+
+
+</div>
 
 
 
