--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -26,7 +26,7 @@
             new_order_path,
             :class => 'btn' %>
           <% if current_user.instance_of? Admin %>
-            <%= link_to 'Download MARC', export_to_marc_orders_path(), class: 'btn default', data: {confirm: 'Are you sure you\'re ready to create the MARC file?'} %> 
+            <%= link_to 'Download MARC', export_to_marc_orders_path(), class: 'btn default', data: {confirm: 'Download MARC will generate marc records for orders that have an accept status. Are you sure you\'re ready to create the MARC file?'} %> 
             <% end %>
 </div>
 <div class="pagination">
