clarify workflows, limit selector actions iss#137, iss#135

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -68,7 +68,7 @@
     </div>
   </div>
 </div>
-<div class="span4">To aide Acquistions staff, please enter as much title information as possible.</div>
+<div class="span4">To aid Content Services staff, please enter as much title information as possible.</div>
 
 </div>
 </div>
