--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -7,10 +7,11 @@
 </div>
   <h4>Accounts</h4>
   <p>Contact <%= mail_to 'crowesn@ucmail.uc.edu', 'Sean Crowe' %> for account creation and password assistance. Tricerashopper is not integrated with the University Central Login system. </p>
-  <h4>Materials Order Form</h4>
-  <p>The materials order form and index allows selectors to submit materials requests and monitor their progress. The index of orders shows title, author, fund, cost, date, and workflow status. Initial order requests are created with a status of new and the form will generate an email confirmation, sent to the requestor and cc'd to site administrators. All order URLs are stable as well as the order form. Requests are reviewed by Content Services staff and processed in the order submitted.</p> <p>Materials can be requested by Selectors or assistants with delegation and review by selectors. Contact Content Services if you are a selector and you interested in delegating permission to request materials through the form.</p>
+    <h4>Materials Order Form</h4>
+    <p>The materials order form and index allows selectors to submit purchase requests and monitor their progress. The index of orders shows title, author, fund, cost, date, and workflow status. Initial order requests are created with a status of <i>new</i>. The form will generate an email confirmation, sent to the requestor and cc'd to site administrators. All URLs are stable for individual orders as well as the order form. Requests are reviewed by Content Services staff and processed in the order submitted.</p>
+    <p>Materials can be requested by Selectors or assistants (with delegation and review by selectors). Contact Content Services if you are a Selector and you interested in delegating permission to request materials through the form.</p>
       <h4>Lost, Missing, Long Overdue (LMLO)</h4>
-      <p>The LMLO index lists materials that have been marked lost or missing and require review for replacement decision. The index has search and faceting by location and class. The report runs automatically once and month and generates notification emails for selectors. The emails include a structured URL which limits by location. The review period will last one month - at the end of the month, materials that have not been selected for replacement <b>will be marked for batch withdrawal from the catalog.</b></p>
+      <p>The LMLO index lists materials that have been marked lost or missing and require review for replacement decision. The index offers search and faceting by location and class. The report runs automatically once and month and generates notification emails for selectors. The emails include a structured URL which limits by location. The review period will last one month - at the end of the month, materials that have not been selected for replacement <b>will be marked for batch withdrawal from the catalog.</b></p>
       <h4>DDA Expenditure Report</h4>
       <p> TBA</p>
       <h4>Contact</h4>
@@ -21,18 +22,90 @@
       <li class="divider"></li>
     </ul>    <h2>Admin Functions</h2>
     <h4>Order Workflow States</h4>
-    <p>Orders have one of several workflow states and available transitions to support the acquisitions workflow. They include</p>
-    <ul>
-      <li>New</li>
-      <li>Accept Print > Print Queue</li>
-      <li>Accept No Print > Print Queue No PO</li>
-      <li>Accept No Action > Ordered</li>
-      <li>Ordered</li>
-      <li>On hold > Waiting</li>
-      <li>Rejected</li>
-    </ul>
+    <p>Orders have one of several workflow states and available actions to support the acquisitions workflow.</p>
+
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>State</th>
+          <th>Available Actions</th>
+          <th>Notes</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+        <td>New</td>
+        <td>Accept print, Accept no print, Temporary hold, Accept no action, Reject</td>
+        <td>New is the default status for incoming orders submitted by selectors.</td>
+      </tr>
+      <tr>
+        <td>MARC queue yes po</td>
+        <td>Accept no action, Temp hold</td>
+        <td>Orders with this status are queued for batch MARC record generation, records will print a PO when loaded into Sierra.</td>
+      </tr>
+      <tr>
+        <td>MARC queue no po</td>
+        <td>Accept no action, Temp hold</td>
+        <td>Orders with this status are queued for batch MARC record generation, records will NOT print a PO when loaded into Sierra.</td>
+      </tr>
+      <tr>
+        <td>Ordered</td>
+        <td>Temp hold</td>
+        <td>Status for orders that have been processed and officially ordered.</td>
+      </tr>
+      <tr>
+        <td>Waiting</td>
+        <td>Accept print, Accept no print, Accept no action, Reject</td>
+        <td>Use Temporary hold status to hold orders for quesons/other actions.</td>
+      </tr>
+      <tr>
+        <td>Rejected</td>
+        <td>Temp hold</td>
+        <td>Rejected status is for order requests that have been rejected.</td>
+      </tr>
+    </tbody>
+  </table>
+  <p>For administrators, each status has a list of available actions to change status.</p>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Action</th>
+        <th>Target States</th>
+        <th>Notes</th>
+        <tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>Accept print</td>
+      <td>MARC queue yes po</td>
+      <td>Generate a MARC record and load with PO printing</td>
+    </tr>
+    <tr>
+      <td>Accept no print</td>
+      <td>MARC queue no po</td>
+      <td>Generate a MARC file and load with NO po printing</td>
+    </tr>
+    <tr>
+      <td>Accept no action</td>
+      <td>Ordered</td>
+      <td>Transition order to ordered state, no MARC record generated</td>
+    </tr> 
+    <tr>
+      <td>Temp hold</td>
+      <td>Waiting</td>
+      <td>Transition record to waiting state; use this as a way to reset.</td>
+    </tr>
+    <tr>
+      <td>Reject</td>
+      <td>Rejected</td>
+      <td>Transition to rejected state</td>
+    </tr>
+    </tbody>
+  </table>
+
+
     <h4>MARC record download</h4>
-    <p>Orders with a workflow state of <i>Accept print po</i> or <i>Accept no po</i> can be processed into MARC records for loading into Sierra. The index page shows a button to download MARC, clicking it will generate two separate MARC files, one for print PO and one for no print PO. Use the respective loaders in Sierra to input the records.</p>
+    <p>Orders with a workflow state of <i>MARC queue yes po</i> or <i>MARC queue no po</i> will be processed into MARC records for loading into Sierra. Click <i>Download MARC</i> button on the index page to generate two separate MARC files: one for print PO and one for no print PO. Use the respective loaders in Sierra to input the records.</p>
       <% end %>
 
     </div>
