--- a/app/views/orders/_show_admin_actions.html.erb
+++ b/app/views/orders/_show_admin_actions.html.erb
@@ -16,10 +16,11 @@
          <%= link_to "Status: #{model_class.human_attribute_name(@order.current_state)}", '', class: 'btn' %>
     <% end %>
   </div>
+  <div class="pull-right">
     <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                 order_path(@order),
                 :method => 'delete',
-                :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                :data => { :confirm => 'This action will permanently DELETE the order. Are you sure??' },
                 :class => 'btn btn-danger' %>
-            
+            </div> 
             <% end %>
