--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -77,7 +77,7 @@
     <div class="control-group required">
     <%= f.label :selector, class: 'control-label' %>
     <div class="controls">
-      <%= f.text_field :selector, class: 'text-field' %>
+      <%= f.text_field :selector, class: 'text-field', value: current_user.email %>
   </div>
   </div>
   <div class="control-group">
