--- a/app/views/dda_expenditures/index.html.erb
+++ b/app/views/dda_expenditures/index.html.erb
@@ -4,16 +4,18 @@
 <body>
 <div class="container-fluid">
   <h2>DDA Expenditures</h2>
-  <div class="row-fluid">
-    <%= pie_chart(@dda_all.group(:fund).sum(:paid)) %>
 
+  <%= image_tag Gchart.pie(:data => @dda_sum.values, :labels => @dda_sum.keys) %>
+  <div class="btn-group">
+    <%= link_to 'Current month', dda_expenditures_path(current_month: true), class: 'btn'%> 
+    <%= link_to 'Fiscal year', dda_expenditures_path, class: 'btn'%> 
+  </div>
+    <div class="row-fluid">
 <table class="table table-striped table-condensed table-responsive">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Paid</th>
       <th>Fund</th>
-      <th>Paid date</th>
+      <th>Amount</th>
       <th></th>
       <th></th>
       <th></th>
@@ -21,12 +23,10 @@
   </thead>
 
   <tbody>
-    <% @dda_expenditures.each do |dda_expenditure| %>
+    <% @dda_sum.each do |key, value| %>
       <tr>
-        <td><%= dda_expenditure.title %></td>
-        <td><%= dda_expenditure.paid %></td>
-        <td><%= dda_expenditure.fund %></td>
-        <td><%= dda_expenditure.paid_date %></td>
+        <td><%= key %></td>
+        <td><%= number_to_currency(value, unit: '$') %></td>
       </tr>
     <% end %>
   </tbody>
@@ -34,6 +34,3 @@
 </div>
 </div>
 
-<div class="pagination">
-  <%= will_paginate @search.hits, renderer: BootstrapPagination::Rails %>
-</div>
