--- a/app/views/problems/index.html.erb
+++ b/app/views/problems/index.html.erb
@@ -4,9 +4,27 @@
 <body>
 <div class="container-fluid">
   <h1> <%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-  <%=render 'results_body' %>
+  <% bootstrap_flash.html_safe %>
+  <% form_tag problems_path, method: :get do %>
+    <div class="input-append">
+      <%= text_field_tag :search, params[:serach] %>
+      <%= submit_tag "Search", name: nil, class: 'btn btn-default' %>
+    <% end %>
   <br>
-
 </div>
+<div class="row-fluid">
+  <div class="span3">
+    <%= render "facets" %>
+  </div>
+  <div class="span8">
+    <%=render 'results_body' %>
+  </div>
+  </div>
+  <div class="container-fluid">
+      <div class="pagination">
+    <%= will_paginate @search.hits, renderer: BootstrapPagination::Rails %>
+  </div>
+  </div>
+  </div>
 </body>
 </html>
