--- a/app/views/orders/_results_body.html.erb
+++ b/app/views/orders/_results_body.html.erb
@@ -16,7 +16,7 @@
         <td><%= link_to order.title, order_path(order) %></td>
         <td><%= order.author %></td>
         <td><%= order.fund %></td>
-        <td><%= order.cost.to_s.insert(-3,'.') %></td>
+        <td><%= number_to_currency(cost_in_dollars(order.cost)) %></td>
         <td><%= order.created_at.strftime("%m/%d/%Y") %></td>
         <td><%= model_class.human_attribute_name(order.workflow_state) %></td>
      </tr>
