new order fix broken div #186

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,12 +1,11 @@
-<html>
 <%= render 'layouts/header' %>
 <%- model_class = Order -%>
 <body>
 <div class="container">
-  <div class="page-header">
-    <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+  <div class="container">
+    <div class="page-header">
+      <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
   </div>
 </div>
 <%= render :partial => 'form' %>
-</body>
-</html>
+</div>
