refactor selector field assignment

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -83,7 +83,7 @@
     <div class="control-group required">
     <%= f.label :selector, class: 'control-label' %>
     <div class="controls">
-      <%= f.text_field :selector, class: 'text-field', value: current_user.email, readonly: true %>
+      <%= f.text_field :selector, class: 'text-field', readonly: true %>
   </div>
   </div>
   <div class="control-group">
