add rejected order mailer

--- a/app/views/order_mailer/ordered_order.html.erb
+++ b/app/views/order_mailer/ordered_order.html.erb
@@ -5,8 +5,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h4>Order Request Confirmation</h4>
-    <p>Your order request has been submitted for review.</p>
+  <h4>Order Completed</h4>
+  <p>Your order has been processed and should now appear in Sierra</p>
     <p>
     <table style="width:75%">
       <tr>
