--- a/app/views/order_mailer/rejected_order.html.erb
+++ b/app/views/order_mailer/rejected_order.html.erb
@@ -5,8 +5,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h4>Order Request Confirmation</h4>
-    <p>Your order request has been submitted for review.</p>
+    <h4>Order Rejected</h4>
     <p>
     <table style="width:75%">
       <tr>
@@ -33,6 +32,11 @@
         <td><strong><%= model_class.human_attribute_name(:cost) %>:</strong></td>
         <td><%= number_to_currency(cost_in_dollars(@order.cost)) %></td>
       </tr>
+      <tr>
+        <td><strong><%= model_class.human_attribute_name(:other_notes) %>:</strong></td>
+        <td><%= number_to_currency(cost_in_dollars(@order.other_notes)) %></td>
+      </tr>
+
     </table>
     </p>
     <p><%= link_to order_url(@order), order_url(@order) %></p>
