--- a/app/views/problems/index.html.erb
+++ b/app/views/problems/index.html.erb
@@ -5,24 +5,23 @@
 <div class="container-fluid">
   <h1> <%=t '.title', :default => "QC #{model_class.model_name.human.pluralize.titleize}" %></h1>
   <% bootstrap_flash.html_safe %>
-  <% form_tag problems_path, method: :get do %>
+  <%= form_tag problems_path, method: :get do %>
     <div class="input-append">
-      <%= text_field_tag :search, params[:serach] %>
+      <%= text_field_tag :record_num, params[:record_num] %>
       <%= submit_tag "Search", name: nil, class: 'btn btn-default' %>
     <% end %>
   <br>
 </div>
 <div class="row-fluid">
   <div class="span3">
-    <%= render "facets" %>
-  </div>
+    <%= render 'facets' %>  </div>
   <div class="span8">
     <%=render 'results_body' %>
   </div>
   </div>
   <div class="container-fluid">
       <div class="pagination">
-    <%= will_paginate @search.hits, renderer: BootstrapPagination::Rails %>
+    <%= will_paginate @problems, renderer: BootstrapPagination::Rails %>
   </div>
   </div>
   </div>
