--- a/app/views/order_mailer/rejected_order.html.erb
+++ b/app/views/order_mailer/rejected_order.html.erb
@@ -34,7 +34,7 @@
       </tr>
       <tr>
         <td><strong><%= model_class.human_attribute_name(:other_notes) %>:</strong></td>
-        <td><%= number_to_currency(cost_in_dollars(@order.other_notes)) %></td>
+        <td><%= @order.other_notes %></td>
       </tr>
 
     </table>
