--- a/app/views/order_mailer/ordered_order.html.erb
+++ b/app/views/order_mailer/ordered_order.html.erb
@@ -31,7 +31,7 @@
       </tr>
       <tr>
         <td><strong><%= model_class.human_attribute_name(:cost) %>:</strong></td>
-        <td><%= number_to_currency(cost_in_dollars(@order.cost)) %></td>
+        <td><%= number_to_currency(cost_in_dollars(@order.cost), unit: "#{@order.currency} ") %></td>
       </tr>
     </table>
     </p>
