--- a/app/views/order_mailer/rejected_order.html.erb
+++ b/app/views/order_mailer/rejected_order.html.erb
@@ -30,7 +30,7 @@
       </tr>
       <tr>
         <td><strong><%= model_class.human_attribute_name(:cost) %>:</strong></td>
-        <td><%= number_to_currency(cost_in_dollars(@order.cost)) %></td>
+        <td><%= number_to_currency(cost_in_dollars(@order.cost), unit: "#{@order.currency} ") %></td>
       </tr>
       <tr>
         <td><strong><%= model_class.human_attribute_name(:other_notes) %>:</strong></td>
