--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -113,7 +113,7 @@
     <div class="control-group required">
       <%= f.label :currency, class: 'control-label' %>
         <div class="controls">
-      <%= f.text_field :currency, class: 'text_field', value: 'USD' %>
+    <%= f.select :currency, options_for_select(currency_list, f.object.currency), selected: @order.currency %>
     </div>
     </div>
   </div>
