--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -33,9 +33,7 @@
   <dt><strong><%= model_class.human_attribute_name(:fund) %>:</strong></dt>
   <dd><%= @order.fund.presence || '-'%></dd>
   <dt><strong><%= model_class.human_attribute_name(:cost) %>:</strong></dt>
-  <dd><%= number_to_currency(cost_in_dollars(@order.cost))  || '-'%></dd>
-  <dt><strong><%= model_class.human_attribute_name(:currency) %>:</strong></dt>
-  <dd><%= @order.currency || '-'%></dd>
+  <dd><%= number_to_currency(cost_in_dollars(@order.cost), unit: "#{@order.currency} ")  || '-'%></dd>
   <dt><strong><%= model_class.human_attribute_name(:added_edition) %>:</strong></dt>
   <dd><%= @order.added_edition.presence || '-'%></dd>
   <dt><strong><%= model_class.human_attribute_name(:added_copy) %>:</strong></dt>
