add audit method

--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -1,5 +1,7 @@
 <%- model_class = Problem -%>
-<% bootstrap_flash %>
+<div class="container">
+  <%= bootstrap_flash %>
+</div>
 <%= render 'layouts/header' %>
 <div class="container">
   <div class="page-header">
