--- a/app/views/problems/_results_body.html.erb
+++ b/app/views/problems/_results_body.html.erb
@@ -11,13 +11,15 @@
 
   <tbody>
     <% @problems.each do |problem| %>
+      <%= div_for problem do %>
       <tr>
         <td><%= link_to problem.record_num, problem_path(problem) %></td>
         <td><%= problem.type %></td>
         <td><%= problem.record_type %></td>
         <td><%= problem.title %></td>
-        <td><%= link_to 'Audit', '#', class: 'btn btn-success' %></td>
+        <td><%= link_to 'Audit', audit_problem_path(problem), class: 'btn btn-success', remote: true %></td>
       </tr>
+    <% end %>
     <% end %>
   </tbody>
 </table>
