--- a/app/views/problems/index.html.erb
+++ b/app/views/problems/index.html.erb
@@ -4,7 +4,7 @@
 <body>
 <div class="container-fluid">
   <h1> <%=t '.title', :default => "QC #{model_class.model_name.human.pluralize.titleize}" %></h1>
-  <% bootstrap_flash.html_safe %>
+  <%= bootstrap_flash.html_safe %>
   <%= form_tag problems_path, method: :get do %>
     <div class="input-append">
       <%= text_field_tag :record_num, params[:record_num] %>
