--- a/app/views/order_mailer/new_order.html.erb
+++ b/app/views/order_mailer/new_order.html.erb
@@ -1,4 +1,3 @@
-<%- model_class = Order -%>
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,32 +7,7 @@
     <h4>Order Request Confirmation</h4>
     <p>Your order request has been submitted for review.</p>
     <p>
-    <table style="width:75%">
-      <tr>
-        <td><strong><%= model_class.human_attribute_name(:author) %>:</strong></td>
-        <td><%= @order.author %></td>
-      </tr>
-      <tr>  
-        <td><strong><%= model_class.human_attribute_name(:title) %>:</strong></td>
-        <td><%= @order.title %></td>
-      </tr>
-      <tr>
-        <td><strong><%= model_class.human_attribute_name(:publisher) %>:</strong></td>
-        <td><%= @order.publisher %></td>
-      </tr>
-      <tr>
-        <td><strong><%= model_class.human_attribute_name(:isbn) %>:</strong></td>
-        <td><%= @order.isbn %></td>
-      </tr>
-      <tr>
-        <td><strong><%= model_class.human_attribute_name(:fund) %>:</strong></td>
-        <td><%= @order.fund %></td>
-      </tr>
-      <tr>
-        <td><strong><%= model_class.human_attribute_name(:cost) %>:</strong></td>
-        <td><%= number_to_currency(cost_in_dollars(@order.cost), unit: "#{@order.currency} ") %></td>
-      </tr>
-    </table>
+      <%= render 'order_fields' %>
     </p>
     <p><%= link_to order_url(@order), order_url(@order) %></p>
   </body>
