add language to orders

--- a/app/views/order_mailer/_order_fields.html.erb
+++ b/app/views/order_mailer/_order_fields.html.erb
@@ -37,6 +37,10 @@
         <td><%= @order.edition.presence || '-' %></td>
       </tr>
       <tr>
+        <td><strong><%= model_class.human_attribute_name(:language) %>:</strong></td>
+        <td><%= @order.language.presence || '-' %></td>
+      </tr>
+      <tr>
         <td><strong><%= model_class.human_attribute_name(:selector) %>:</strong></td>
         <td><%= @order.selector || '-' %></td>
       </tr>
