--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -73,6 +73,11 @@
     <%= f.text_field :edition, class: 'text-field' %>
     </div>
   </div>
+  <div class="control-group">
+    <%= f.label :language, class: 'control-label'%>
+    <div class="controls">
+    <%= f.select :language, options_for_select(language_list, f.object.language), selected: @order.language %>
+  </div>
 </div>
 <div class="span4">To aid Content Services staff, please enter as much title information as possible.</div>
 
