--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -79,6 +79,7 @@
     <%= f.select :language, options_for_select(language_list, f.object.language), selected: @order.language %>
   </div>
 </div>
+</div>
 <div class="span4">To aid Content Services staff, please enter as much title information as possible.</div>
 
 </div>
