--- a/app/views/problems/audit.js.erb
+++ b/app/views/problems/audit.js.erb
@@ -1,2 +1,10 @@
-var element = document.getElementById("<%= @problem.id %>");
-element.remove();
+$('a').on('ajax:success', function(event){
+    var audit_pass= <%= @audit_pass %>
+    if(audit_pass == true){
+      $(this).closest('tr').fadeOut('slow');
+    }
+    else{
+      $(this).closest('tr').attr('class', 'fail');
+    }
+      $('a').unbind()
+  })
